--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,19 +1,10 @@
+@import "./colors.scss";
+
 #app {
-  font-family: Avenir, Helvetica, Arial, sans-serif;
+  font-family: monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
-  color: #2c3e50;
+  color: $color-primary;
   margin-top: 60px;
-}
-
-a {
-  color: #42b983;
-  text-decoration: none;
-}
-
-h1 {
-  font-size: 2em;
-  margin: 0;
-  font-weight: bold;
 }
