+changelog, +colors, +styles, -tasks, +pages, +components, +tasks
Added more colors, added styles, finished two tasks from the ToDo list, added the about page, navbar and added two more tasks.

--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -22,3 +22,15 @@ $color-warning-light: #ffd400;
 $color-danger: #ff3a30;
 $color-danger-dark: #ff1a00;
 $color-danger-light: #ff4d4d;
+// Link
+$color-link: #00cc33;
+$color-link-dark: #00992e;
+$color-link-light: #00d853;
+// Text
+$color-text: #333;
+$color-text-dark: #222;
+$color-text-light: #555;
+// Background
+$color-background: #fff;
+$color-background-dark: #f8f8f8;
+$color-background-light: #fff;
