--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,6 +5,6 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
-  color: $color-primary;
+  color: $color-text;
   margin-top: 60px;
 }
